fix search bar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -235,14 +235,42 @@ input[type="search"] {
     margin-bottom: 20px;
   }
 
-  .menu .nav nav ul li input[type="search"] {
-    width: 100%;
-    float: none;
-    padding: 0.4em;
-    text-align: center;
-    display: block;
-    border-bottom: 3px solid #01da90;
-  }
+  input[type="search"] {
+  display:block;
+  border:0;
+  outline:0;
+  border-radius:2px;
+  box-shadow:0px 2px 1px rgba(0,0,0,.1);
+  width:50%;
+  max-width:300px;
+  color:#000;
+  padding:20px;
+  font-size:20px;
+  margin:50px auto;
+  font-family:"Helvetica Neue", Helvetica, Arial;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+  position:relative;
+  -webkit-appearance: none;
+  cursor:pointer;
+}
+
+input[type="search"]::-webkit-search-cancel-button:before {
+  position:absolute;
+  top:-10px;
+  right:0px;
+  content:"✖";
+  color:#bbb;
+}
+
+::-webkit-input-placeholder {
+  color: #bbb;
+}
+
+::-moz-placeholder {
+  color: #bbb;
+}
 
 }
 
